# job-hub

./: .dockerignore  .gitignore  DATABASE_SCHEMA.sql  Procfile  README.md  heroku.yml  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  turbo.json
apps/backend/: Dockerfile  GMAIL_USAGE.md  PROCESS_EMAIL_IMPLEMENTATION.md  SERVICE_ARCHITECTURE.md  deploy.sh  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  start_prod.sh
apps/backend/app/: __init__.py  config.py  main.py
apps/backend/app/core/: auth.py  config.py
apps/backend/app/models/: __init__.py  email.py  models.py
apps/backend/app/models/api/: __init__.py  application_event.py  application_source.py  email.py  job_application.py
apps/backend/app/models/llm/: __init__.py  (+1 more)
apps/backend/app/routes/: __init__.py  applications.py  auth.py  gmail.py  parse.py  pubsub.py
apps/backend/app/services/: __init__.py  application_matcher.py  application_matcher_service.py  base_service.py  db_operations.py  email_parsing_service.py  error_handler.py  gmail_service.py  job_application_service.py  llm.py  supabase.py  supabase_service.py
apps/backend/app/tasks/: email_ingest_worker.py  gmail_watch_refresh.py
apps/backend/app/tests/: test_email_parsing.py
apps/backend/scripts/: audit_duplicate_risks.sql  dedupe_job_applications.sql  run_refresh.py
apps/backend/tests/: conftest.py  test_application_source_service.py  test_email_ingest_queue.py  test_gmail_routes.py  test_gmail_service.py  test_google_genai_sdk.py  test_process_email.py
(+59 files in other folders)
